--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  lottie: ^3.1.3
+  cupertino_icons: ^1.0.6
+  firebase_core: ^2.31.0
+  cloud_firestore: ^4.17.4
+  firebase_storage: ^11.7.6
+  intl: ^0.19.0
+  image_picker: ^1.1.1
+  firebase_auth: ^4.19.6
+  google_sign_in: ^6.2.1
+  firebase_database: ^10.5.7
+  fluttertoast: ^8.2.6
+  url_launcher: ^6.3.0
+  flutter_vector_icons:
+  video_player: ^2.8.1
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
@@ -53,27 +59,19 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+ 
   uses-material-design: true
+  
+  
+  assets:
+     - assets/images/achat.json
+     - assets/images/business.json
+     - assets/images/gas.json
+     - assets/videos/egas.mp4
+     - assets/authentication/login.json
+     - assets/authentication/signup.json
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   # fonts:
   #   - family: Schyler
   #     fonts:
