--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   video_player: ^2.8.1
   google_fonts: ^5.0.0
   provider: ^6.0.5
+  sliding_clipped_nav_bar:
+  carousel_slider:
   
 
   
@@ -74,6 +76,11 @@ flutter:
      - assets/videos/egas.mp4
      - assets/authentication/login.json
      - assets/authentication/signup.json
+     - assets/images/gaz.jpg
+     - assets/images/gaze.jpg
+     - assets/images/delivery.jpg
+     - assets/images/comfort.jpg
+
 
 
   # fonts:
