--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: egaz
+name: e_gaz
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -81,7 +81,9 @@ flutter:
      - assets/images/delivery.jpg
      - assets/images/comfort.jpg
 
-
+platforms:
+    windows:
+    Web:
 
   # fonts:
   #   - family: Schyler
