--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   provider: ^6.0.5
   sliding_clipped_nav_bar:
   carousel_slider:
+  kkiapay_flutter_sdk:
   
 
   
@@ -80,6 +81,8 @@ flutter:
      - assets/images/gaze.jpg
      - assets/images/delivery.jpg
      - assets/images/comfort.jpg
+     - assets/images/success_payment.json
+     - assets/images/failure.json
 
 
 
