--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -17,7 +17,9 @@ android {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
-
+    dependencies{
+        
+    }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
