--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,11 @@ allprojects {
     }
 }
 
+
+dependencies{
+    
+}
+
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
